--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@ hr {
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
-  margin-top: 0;
   margin-bottom: 0.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.3rem;
@@ -11149,6 +11148,10 @@ footer {
 
   #mainNav {
     margin-bottom: 0%;
+  }
+
+  h2 .page-section-heading {
+    padding-top: calc(calc(0.5rem + 100px)) !important;
   }
 }
 
