--- a/css/style.css
+++ b/css/style.css
@@ -10937,6 +10937,10 @@ html {
 }
 #mainNav .navbar-nav li.nav-item a.nav-link {
   color: rgb(187, 225, 250);
+  padding-top: var(--bs-navbar-brand-padding-y);
+    padding-bottom: var(--bs-navbar-brand-padding-y);
+    margin-left: var(--bs-navbar-brand-margin-end);
+    margin-right: var(--bs-navbar-brand-margin-end);
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
   color: rgb(50, 130, 184);
